--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,8 @@
 <body>
     <h2>Upload Insurance Claims Excel</h2>
     <form action="/" method="post" enctype="multipart/form-data">
-        <input type="file" name="file">
+        <input type="file" name="data">
+        <input type="file" name="images" webkitdirectory directory multiple>
         <input type="submit" value="Generate Reports">
     </form>
 </body>
